# finance-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 00 - Overview.md  01 - Stack & Architecture.md  02 - GoCardless Setup.md  03 - Security.md  04 - Roadmap & Phases.md  05 - Future Extensions.md  06 - GitHub & OSS Plan.md  07 - Decisions Log.md  08 - Open Questions.md
docs/design/selffinance-automated-datasheet-remix/: README.md
docs/design/selffinance-automated-datasheet-remix/chats/: chat1.md
docs/design/selffinance-automated-datasheet-remix/project/: Dashboard-source.html  Dashboard.html  Finance Dashboard.html
docs/design/selffinance-automated-datasheet-remix/project/src/: accounts.jsx  app.jsx  cards.jsx  categories.jsx  chart.jsx  data.jsx  icons.jsx  sidebar.jsx  sparkline.jsx  topbar.jsx  transactions.jsx
scripts/: smoke_enablebanking.py
src/finance/: auth.py  csv_import.py  db.py  main.py  set_password.py
src/finance/providers/: claude.py  cnb.py  enablebanking.py
src/finance/templates/: accounts.html  base.html  categories.html  dashboard.html  graf.html  import.html  login.html  master_plan.html  rules.html  summary.html  transactions.html  transactions_all.html
tests/: conftest.py  test_auth.py  test_db_categories.py  test_db_consent.py  test_db_rules.py  test_db_upsert.py
